--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,85 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Inter';
+}
+
+
+nav{
+  display: flex;
+  gap: 8px;
+  background-color: #F55A5A;
+  justify-content: center;
+  padding: 16px;
+  align-items: center;
+}
+
+nav > h2{
+  color: white;
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.card{
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  max-width: 475px;
+  padding-top: 40px;
+  padding-bottom: 18px;
+  border-bottom: 1px #F5F5F5 solid;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card-image{
+  width: 125px;
+  height: 168px;
+  border-radius: 5px;
+  object-fit: cover;
+}
+
+.card-location{
+  display: flex;
+  align-items: center;
+}
+
+.location{
+  font-size: 10px;
+  font-weight: 400;
+  text-transform: uppercase;
+  margin-left: 4px;
+  margin-right: 12px;
+  color: #2B283A;
+}
+
+.location-link{
+  font-size: 10px;
+  font-weight: 400;
+  color: #918E9B;
+}
+
+.title{
+  color: #2B283A;
+  font-size: 25px;
+  font-weight: 700;
+  line-height: 30px;
+  margin-top: 8px;
+  margin-bottom: 16px;
+}
+
+.date{
+  color: #2B283A;
+  font-size: 10px;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+
+.description {
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 15px;
 }
